--- a/signup/templates/home.html
+++ b/signup/templates/home.html
@@ -28,7 +28,7 @@
   </div>
 </nav>
 <div class="container">
-    <h1>Jobs</h1>
+    <h1>Jobs pour {{ user }}</h1>
     <div class="row">
     {% for travail in travaux %}
         <div class="col">
