--- a/signup/templates/home.html
+++ b/signup/templates/home.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,13 +6,14 @@
     <title>Title</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/home.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
             crossorigin="anonymous"></script>
 
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container-fluid">
     <a class="navbar-brand" href="#">Solid'Aire</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
@@ -19,32 +21,15 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
+        <a class="nav-link active" aria-current="page" href="home">Home</a>
         <a class="nav-link" href="#">Services</a>
-        <a class="nav-link" href="#">Taches</a>
+        <a class="nav-link" href="{% url 'taches' %}">Taches</a>
+          <a class="nav-link" href="#">Mon Profil</a>
         <a href="logout"><button type="button" class="btn btn-danger">Deconnexion</button></a>
       </div>
     </div>
   </div>
 </nav>
-<div class="container">
-    <h1>Jobs</h1>
-    <div class="row">
-    {% for travail in travaux %}
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{{ travail.image_url }}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title"><b></b>{{ travail.name }}</h5></h5>
-                    <b class="card-text"><b></b>{{ trvail.price }}€ </b></p>
-                    <a href="#" class="btn btn-primary">Postuler</a>
-                </div>
-            </div>
-        </div>
-    {% endfor %}
-    </div>
-
-</div>
 
 </body>
 </html>
