--- a/signup/templates/index.html
+++ b/signup/templates/index.html
@@ -1,21 +1,57 @@
-{% extends 'base.html' %}
+{% load static %}
+<!doctype html>
+<html lang="en">
+<head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-<!--{% block content %}
-    <h1>Products</h1>
-    <div class="row">
-    {% for product in products %}
-        <div class="col">
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="{{ product.image_url }}" alt="Card image cap">
-                <div class="card-body">
-                    <h5 class="card-title"><b></b>{{ product.name }}</h5></h5>
-                    <b class="card-text"><b></b>{{ product.price }}€ </b></p>
-                    <a href="#" class="btn btn-primary">Postuler</a>
-                </div>
-            </div>
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/signup.css' %}">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+            crossorigin="anonymous"></script>
+    <title>Solid'Aire</title>
+</head>
+<body>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">SOLID'AIRE</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link active"  aria-current="page" href="{%url 'index' %}">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="login">Se connecter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link"  href="signup">Créer de compte</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">A Propos</a>
+                </li>
+            </ul>
         </div>
-    {% endfor %}
     </div>
+</nav>
+<div class="container">
+    {% block content %}
+    {% endblock %}
+</div>
 
-{% endblock %}>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+
+</body>
+</html>
