--- a/signup/templates/login.html
+++ b/signup/templates/login.html
@@ -1,4 +1,3 @@
-{% extends 'base.html' %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,7 +10,31 @@
             crossorigin="anonymous"></script>
 </head>
 <body>
-{% block content %}
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">SOLID'AIRE</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="{%url 'index' %}">Accueil</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="login">Se connecter</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="signup">Créer de compte</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">A Propos</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
 <div class="container">
     <h1>Page de Login</h1>
 
@@ -27,6 +50,5 @@
         <p>{{ message }}</p>
     {% endfor %}
 </div>
-{% endblock %}
 </body>
 </html>
