--- a/signup/templates/signup.html
+++ b/signup/templates/signup.html
@@ -1,20 +1,8 @@
 {% extends 'base.html' %}
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
-          integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-            crossorigin="anonymous"></script>
-</head>
-<body>
 {% block content %}
-<div class="container">
-    <h1>Créer votre compte Ici</h1>
+
 <form action="" method="POST">
+<h1>Créer votre compte</h1>
     {% csrf_token %}
     <p>{{ form.username }}</p>
     <p>{{ form.first_name }}</p>
@@ -25,10 +13,18 @@
     <input type="submit" value="Créer" class="btn btn-success"><br>
     <p>Avez vous de compte? cliquer  <a href="{% url 'login' %}">ici</a></p>
 </form>
-    {% for message in messages %}
-    <p>{{ message }}</p>
+    {% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %}
+            <div class="alert alert-danger">
+                <strong>{{ error|escape }}</strong>
+            </div>
+        {% endfor %}
     {% endfor %}
-</div>
+    {% for error in form.non_field_errors %}
+        <div class="alert alert-danger">
+            <strong>{{ error|escape }}</strong>
+        </div>
+    {% endfor %}
+{% endif %}
 {% endblock %}
-</body>
-</html>
