--- a/signup/templates/login.html
+++ b/signup/templates/login.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,13 +6,14 @@
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="{% static 'css/login.css' %}">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
             integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
             crossorigin="anonymous"></script>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
+    <div class="container-fluid">
         <a class="navbar-brand" href="#">SOLID'AIRE</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -36,19 +38,22 @@
     </div>
 </nav>
 <div class="container">
+<div class="row">
+<div class="col-md-4">
     <h1>Page de Login</h1>
-
     <form action="" method="POST">
         {% csrf_token %}
         <p><input type="text" name="username" placeholder="Nom d'utilisateur"></p>
         <p><input type="password" name="password" placeholder="Mot de passe"></p>
         <input type="submit" value="Connecter" class="btn btn-success"><br>
-        <p>N'Avez vous pas de compte? cliquer  <a href="{% url 'signup' %}">ici</a></p>
+        <p>N'avez vous pas de compte? cliquer  <a href="{% url 'signup' %}">ici</a></p>
     </form>
 
     {% for message in messages %}
         <p>{{ message }}</p>
     {% endfor %}
+</div>
+</div>
 </div>
 </body>
 </html>
